[package]
name = "cubic-cuprum"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reverse proxy for Minecraft Java Edition"

[dependencies]
cubic-protocol = { version = "0.1.8", features = ["default_packets"] }
cubic-protocol-server = "0.1.9"
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
log = "0.4.17"
simple_logger = "2.1.0"
anyhow = "1.0.58"